--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
-  "keywords": ["Gerenciamento de Alimentos"],
+  "keywords": [
+    "Gerenciamento de Alimentos"
+  ],
   "author": "Melissa Freitas",
   "license": "MIT",
   "dependencies": {
